--- a/client/supermarket-app/src/app/components/login-and-register/login-and-register.component.html
+++ b/client/supermarket-app/src/app/components/login-and-register/login-and-register.component.html
@@ -2,7 +2,7 @@
 <div class="pic-container">
     <img src="../../../assets//entrace pic.jpg" alt="entracePic" class="entrace-pic">
     <h2>Updated number of products in our store:{{this.productsCount}}</h2>
-    <h2>Number of orders made in our store: NULL</h2>
+    <h2>Number of orders made in our store: {{this.ordersCount}}</h2>
 </div>
 
 <div class="form-container">
