--- a/client/supermarket-app/src/app/components/customer/customer.component.html
+++ b/client/supermarket-app/src/app/components/customer/customer.component.html
@@ -1,4 +1,42 @@
-<h1>customer</h1>
 
-<!-- <app-products-container ></app-products-container> -->
+<div *ngIf="this.isCartOpen ===2 || this.isCartOpen ===3"  id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    </div>
+    
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../../../assets/fresh vegi.jpeg" class="d-block w-100" alt="freshVegi">
+      </div>
+      <div class="carousel-item">
+        <img src="../../../assets/cheese.jpg" class="d-block w-100" alt="cheese">
+      </div>
+      <div class="carousel-item">
+        <img src="../../../assets/red_meat.jpg" class="d-block w-100" alt="meat">
+      </div>
+      <div class="carousel-item">
+        <img src="../../../assets/bread.jpg" class="d-block w-100" alt="bread">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+
+
+  <div>
+    <h1>{{this.cartStatusMessage}}</h1>
+  </div>
+<button *ngIf="this.isCartOpen ===2" mat-raised-button color="primary" (click)="toggleCartContainer()">Continue shopping ...</button>
+<button *ngIf="this.isCartOpen ===3" mat-raised-button color="accent" (click)="toggleCartContainer()">Click to start shopping</button>
+<app-products-container *ngIf="isProductsListOn" ></app-products-container>
 
