--- a/client/supermarket-app/src/styles.css
+++ b/client/supermarket-app/src/styles.css
@@ -5,3 +5,9 @@ body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.highlight {
+  background-color: rgb(226, 238, 62);
+  font-weight: bold;
+}
