--- a/client/supermarket-app/src/app/components/products-card/products-card.component.css
+++ b/client/supermarket-app/src/app/components/products-card/products-card.component.css
@@ -13,8 +13,9 @@
 .card {
   border: 1px solid black;
   width: 300px;
-  height: 300px;
+  height: 350px;
   margin: 15px;
+  padding: 15px;
 }
 
 .card:hover {
@@ -36,3 +37,19 @@
   transition: width 0.5s;
   background-color: rgb(114, 224, 197);
 }
+.edit-product {
+  color: rgb(22, 87, 71);
+  margin: 10px;
+  width: 80px;
+  align-self: center;
+  border-radius: 12px;
+}
+
+.edit-product:hover {
+  font-weight: bolder;
+  color: rgb(0, 6, 10);
+  width: 120px;
+  transition: width 0.5s;
+  background-color: rgb(114, 224, 197);
+}
+
