--- a/client/supermarket-app/src/app/components/edit-product/edit-product.component.html
+++ b/client/supermarket-app/src/app/components/edit-product/edit-product.component.html
@@ -1,19 +1,33 @@
 <p>edit-product works!</p>
 
 <form #editProductForm='ngForm' >
-    
-        <mat-label>Product name</mat-label><br>
-        <input type="text"  [(ngModel)]="this.prodcutToEdit!.name" name="name" id="" required
-        #productNameInput='ngModel'><br>
-        <span *ngIf="productNameInput.errors?.required && productNameInput.touched">"You must enter product name"<br></span>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Product name</mat-label>
+              <input type="text" matInput placeholder="Product name" name="name" #productNameInput='ngModel'
+              [(ngModel)]="this.prodcutToEdit!.name" required >
+            </mat-form-field><br>
+            <span *ngIf="productNameInput.errors?.required && productNameInput.touched">"You must enter product name"<br></span>
+        </p>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Product price</mat-label>
+              <input type="number" matInput placeholder="product price" name="price" #productPriceInput='ngModel'
+              [(ngModel)]="this.prodcutToEdit!.price" required min="1" pattern="^\d*(\.\d{0,2})?$">
+            </mat-form-field><br>
+            <span *ngIf="productPriceInput.errors?.required && productPriceInput.touched">"You must enter product price"<br></span>
+            <span *ngIf="productPriceInput.errors?.min ">"Minimum product value is 1$"<br></span>
+            <span *ngIf="productPriceInput.errors?.pattern ">"Max decimal for product is only 2 digits"<br></span>
+        </p>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Image URL</mat-label>
+              <input type="text" matInput placeholder="Insert image URL" name="image" #productImageInput='ngModel'
+              [(ngModel)]="this.prodcutToEdit!.imageUrl" required>
+            </mat-form-field><br>
+            <span *ngIf="productImageInput.errors?.required && productImageInput.touched">"You must enter product image URL "<br></span>
+        </p>
 
-        <mat-label>Product price</mat-label><br>
-        <input type="text"  [(ngModel)]="this.prodcutToEdit!.price" name="price" required min="1" pattern="^\d*(\.\d{0,2})?$" 
-        #productPriceInput='ngModel' id=""><br>
-        <span *ngIf="productPriceInput.errors?.required && productPriceInput.touched">"You must enter product price"<br></span>
-        <span *ngIf="productPriceInput.errors?.min ">"Minimum product value is 1$"<br></span>
-        <span *ngIf="productPriceInput.errors?.pattern ">"Max decimal for product is only 2 digits"<br></span>
-        
         <mat-label>Product categoryName</mat-label><br>
         <select [(ngModel)]="this.prodcutToEdit!.categoryName" (ngModelChange)="onChange($event)" name="category" required
         #categoryInput='ngModel' >
@@ -21,12 +35,7 @@
             <option *ngFor="let category of categoriesService.categories " value="{{category.id}}" >{{category.name}} </option>
         </select><br>
         <span *ngIf="categoryInput.touched && categoryInput.errors?.required">"please choose a catgory"<br></span>
-        
-        <mat-label>Product imageUrl</mat-label><br>
-        <input type="text"  [(ngModel)]="this.prodcutToEdit!.imageUrl" name="imageUrl" required
-        #productImageInput='ngModel' id=""><br>
-        <span *ngIf="productImageInput.errors?.required && productImageInput.touched">"You must enter product image"<br></span>
-
+                
         <button mat-raised-button color="accent" (click)="updateProduct()" [disabled]='editProductForm.form.invalid'>update product</button>
 
 </form>
