--- a/client/supermarket-app/src/app/components/edit-product/edit-product.component.css
+++ b/client/supermarket-app/src/app/components/edit-product/edit-product.component.css
@@ -7,3 +7,11 @@
   .example-full-width {
     width: 100%;
   }
+
+  input,button {
+    margin: 20px;
+  }
+  
+  span{
+    color: rgb(247, 120, 97);
+  }
