--- a/client/supermarket-app/src/app/components/login-and-register/login-and-register.component.html
+++ b/client/supermarket-app/src/app/components/login-and-register/login-and-register.component.html
@@ -25,12 +25,12 @@
 </div>
 
 <div *ngIf="stepOneRegister">
-    <form #registerForm='ngForm'>
+    <form #registerForm1='ngForm'>
         <h1>Register</h1>
-        <input type="text" placeholder="Id Number" name="idNumber"  autocomplete="on" 
-        #IdNumberInput='ngModel' [(ngModel)]="userRegisterDetails.idNumber" required minlength="8" maxlength="9"><br>
-        <span *ngIf="IdNumberInput.errors?.minlength">"Id number minlength 8 characthers"<br></span>
-        <span *ngIf="IdNumberInput.errors?.maxlength">"Id number maxlength 9 characthers"<br></span>
+        <input type="number" placeholder="Id Number" name="idNumber"  autocomplete="on" 
+        #IdNumberInput='ngModel' [(ngModel)]="userRegisterDetails.idNumber" required max=999999999 ><br>
+        <span *ngIf="IdNumberInput.errors?.min">"Id number minlength 8 characthers"<br></span>
+        <span *ngIf="IdNumberInput.errors?.max">"Id number maxlength 9 characthers"<br></span>
         <input type="email" placeholder="email" name="email"  autocomplete="on"
         #emailInput='ngModel' [(ngModel)]="userRegisterDetails.email" required ngModel [email]="true"><br>
         <span *ngIf="emailInput.errors?.email">"you need to fill value in email format"<br></span>
@@ -43,7 +43,7 @@
         <span *ngIf="confirmPasswordInput.errors?.minlength">"password min length 8 characthers"<br></span>
         <span *ngIf="confirmPasswordInput.errors?.maxlength">"password max length 12 characthers"<br></span>
         <!-- <input type="button" (click)="handleFormState()" value="next step"  [disabled]='registerForm.form.invalid' />  -->
-        <button mat-raised-button color="accent" (click)="handleFormState()"   [disabled]='registerForm.form.invalid'>next step</button>
+        <button mat-raised-button color="accent" type="button" (click)="registerFirstStep()"   [disabled]='registerForm1.form.invalid'>next step</button>
 
     </form>
 </div>
@@ -70,7 +70,7 @@
         <span *ngIf="lastNameInput.touched && lastNameInput.errors?.required">"please fill last name input"<br></span>
 
         <!-- <input type="button" (click)="register()" value="register"  [disabled]='registerForm.form.invalid'/>  -->
-        <button mat-raised-button color="accent" (click)="register()" [disabled]='registerForm.form.invalid'>register</button>
+        <button mat-raised-button color="accent" (click)="registerSeconedStep()" [disabled]='registerForm.form.invalid'>register</button>
 
     </form>
 </div>
