--- a/client/supermarket-app/src/app/components/navbar/navbar.component.css
+++ b/client/supermarket-app/src/app/components/navbar/navbar.component.css
@@ -3,11 +3,17 @@
   right: 15px;
 }
 
+.username-nav {
+  position: absolute;
+  right: 120px;
+}
+
 .cart-btn {
   position: absolute;
   right: 65px
 }
 
-button,span{
+button,
+span {
   margin-right: 20px;
 }
