--- a/client/supermarket-app/src/app/components/login-and-register/login-and-register.component.html
+++ b/client/supermarket-app/src/app/components/login-and-register/login-and-register.component.html
@@ -11,14 +11,24 @@
 <div *ngIf="stepOneLogin">
     <form #loginForm='ngForm'>
         <h1>Login</h1>
-        <input type="text" placeholder="User name" name="email"  autocomplete="on"
-        #userNameInput='ngModel' [(ngModel)]="userLoginDetails.email" required><br>
-        <span *ngIf="userNameInput.touched && userNameInput.errors?.required">"username field is empty"</span><br>
-        <input type="password" placeholder="Password" name="password"  autocomplete="on"
-        #passwordInput='ngModel' [(ngModel)]="userLoginDetails.password" required minlength="8" maxlength="12"><br>
-        <span *ngIf="passwordInput.errors?.minlength">"password min length 8 characthers"</span><br>
-        <span *ngIf="passwordInput.errors?.maxlength">"password max length 12 characthers"</span><br>
-        <!-- <input  type="button" (click)="login()" value="Login" [disabled]='loginForm.form.invalid'/> -->
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>User name</mat-label>
+              <input type="text" matInput placeholder="User name" name="email" #userNameInput='ngModel'
+               [(ngModel)]="userLoginDetails.email" required >
+            </mat-form-field><br>
+            <span *ngIf="userNameInput.errors?.required && userNameInput.touched" >"username field is empty"</span><br>
+        </p>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Password</mat-label>
+              <input type="password" matInput placeholder="Password" name="password" #passwordInput='ngModel'
+               [(ngModel)]="userLoginDetails.password" required minlength="8" maxlength="12" >
+            </mat-form-field><br>
+            <span *ngIf="passwordInput.errors?.required && passwordInput.touched" >"Password field is empty"</span><br>
+            <span *ngIf="passwordInput.errors?.minlength">"password min length 8 characthers"</span><br>
+            <span *ngIf="passwordInput.errors?.maxlength">"password max length 12 characthers"</span><br>
+        </p>
         <button mat-raised-button color="accent" (click)="login()" [disabled]='loginForm.form.invalid'>Login</button>
 
     </form>
@@ -27,24 +37,47 @@
 <div *ngIf="stepOneRegister">
     <form #registerForm1='ngForm'>
         <h1>Register</h1>
-        <input type="number" placeholder="Id Number" name="idNumber"  autocomplete="on" 
-        #IdNumberInput='ngModel' [(ngModel)]="userRegisterDetails.idNumber" required max=999999999 ><br>
-        <span *ngIf="IdNumberInput.errors?.min">"Id number minlength 8 characthers"<br></span>
-        <span *ngIf="IdNumberInput.errors?.max">"Id number maxlength 9 characthers"<br></span>
-        <input type="email" placeholder="email" name="email"  autocomplete="on"
-        #emailInput='ngModel' [(ngModel)]="userRegisterDetails.email" required ngModel [email]="true"><br>
-        <span *ngIf="emailInput.errors?.email">"you need to fill value in email format"<br></span>
-        <input type="password" placeholder="Password" name="password"  autocomplete="on"
-        #passwordInputRegister='ngModel' [(ngModel)]="userRegisterDetails.password" required minlength="8" maxlength="12"><br>
-        <span *ngIf="passwordInputRegister.errors?.minlength">"password min length 8 characthers"<br></span>
-        <span *ngIf="passwordInputRegister.errors?.maxlength">"password max length 12 characthers"<br></span>
-        <input type="password" placeholder="Confirm Password" name="confirmPassword"  autocomplete="on"
-        #confirmPasswordInput='ngModel' [(ngModel)]="userRegisterDetails.confirmPassword" required minlength="8" maxlength="12"><br>
-        <span *ngIf="confirmPasswordInput.errors?.minlength">"password min length 8 characthers"<br></span>
-        <span *ngIf="confirmPasswordInput.errors?.maxlength">"password max length 12 characthers"<br></span>
-        <!-- <input type="button" (click)="handleFormState()" value="next step"  [disabled]='registerForm.form.invalid' />  -->
-        <button mat-raised-button color="accent" type="button" (click)="registerFirstStep()"   [disabled]='registerForm1.form.invalid'>next step</button>
 
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Id Number</mat-label>
+              <input type="number" matInput placeholder="Id Number" name="idNumber" #IdNumberInput='ngModel'
+               [(ngModel)]="userRegisterDetails.idNumber" required max=999999999 >
+            </mat-form-field><br>
+            <span *ngIf="IdNumberInput.errors?.required && IdNumberInput.touched" >"Id Number field is empty"</span><br>
+            <span *ngIf="IdNumberInput.errors?.min">"Id number minlength 8 characthers"<br></span>
+            <span *ngIf="IdNumberInput.errors?.max">"Id number maxlength 9 characthers"<br></span>
+        </p>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Email</mat-label>
+              <input type="email" matInput placeholder="Email" name="email" #emailInput='ngModel'
+               [(ngModel)]="userRegisterDetails.email" required ngModel [email]="true">
+            </mat-form-field><br>
+            <span *ngIf="emailInput.errors?.required && emailInput.touched" >"Email field is empty"</span><br>
+            <span *ngIf="emailInput.errors?.email">"you need to fill value in email format"<br></span>
+        </p>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Password</mat-label>
+              <input type="password" matInput placeholder="Password" name="password" #passwordInputRegister='ngModel'
+               [(ngModel)]="userRegisterDetails.password" required minlength="8" maxlength="12">
+            </mat-form-field><br>
+            <span *ngIf="passwordInputRegister.errors?.required && passwordInputRegister.touched" >"Password field is empty"</span><br>
+            <span *ngIf="passwordInputRegister.errors?.minlength">"password min length 8 characthers"<br></span>
+            <span *ngIf="passwordInputRegister.errors?.maxlength">"password max length 12 characthers"<br></span>
+        </p>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Password</mat-label>
+              <input type="password" matInput placeholder="Confirm Password" name="confirmPassword" #confirmPasswordInput='ngModel'
+               [(ngModel)]="userRegisterDetails.confirmPassword" required minlength="8" maxlength="12">
+            </mat-form-field><br>
+            <span *ngIf="confirmPasswordInput.errors?.required && confirmPasswordInput.touched" >"Password field is empty"</span><br>
+            <span *ngIf="confirmPasswordInput.errors?.minlength">"password min length 8 characthers"<br></span>
+            <span *ngIf="confirmPasswordInput.errors?.maxlength">"password max length 12 characthers"<br></span>
+        </p>
+        <button mat-raised-button color="accent" type="button" (click)="registerFirstStep()"   [disabled]='registerForm1.form.invalid'>next step</button>
     </form>
 </div>
 
@@ -56,20 +89,32 @@
             <option *ngFor="let city of cities">{{city}}</option>
         </select><br>
         <span *ngIf="cityInput.touched && cityInput.errors?.required">"please choose a city"<br></span>
-        
-        <input type="text" placeholder="Street address" name="street"  autocomplete="on" required #streetInput='ngModel'
-        [(ngModel)]="userRegisterDetails.street"><br>
-        <span *ngIf="streetInput.touched && streetInput.errors?.required">"please fill street input"<br></span>
-       
-        <input type="text" placeholder="First Name" name="firstName"  autocomplete="on" required #firstNameInput='ngModel'
-        [(ngModel)]="userRegisterDetails.firstName"><br>
-        <span *ngIf="firstNameInput.touched && firstNameInput.errors?.required">"please fill first name input"<br></span>
 
-        <input type="text" placeholder="Last Name" name="lastName"  autocomplete="on" required #lastNameInput='ngModel'
-        [(ngModel)]="userRegisterDetails.lastName"><br>
-        <span *ngIf="lastNameInput.touched && lastNameInput.errors?.required">"please fill last name input"<br></span>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Street address</mat-label>
+              <input type="text" matInput placeholder="Street address" name="street" #streetInput='ngModel'
+               [(ngModel)]="userRegisterDetails.street" required >
+            </mat-form-field><br>
+            <span *ngIf="streetInput.touched && streetInput.errors?.required">"please fill street input"<br></span>
+        </p>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>First Name</mat-label>
+              <input type="text" matInput placeholder="First Name" name="firstName" #firstNameInput='ngModel'
+               [(ngModel)]="userRegisterDetails.firstName" required >
+            </mat-form-field><br>
+            <span *ngIf="firstNameInput.touched && firstNameInput.errors?.required">"please fill street input"<br></span>
+        </p>
+        <p>
+            <mat-form-field appearance="legacy" >
+              <mat-label>Last Name</mat-label>
+              <input type="text" matInput placeholder="Last Name" name="lastName" #lastNameInput='ngModel'
+               [(ngModel)]="userRegisterDetails.lastName" required >
+            </mat-form-field><br>
+            <span *ngIf="lastNameInput.touched && lastNameInput.errors?.required">"please fill street input"<br></span>
+        </p>
 
-        <!-- <input type="button" (click)="register()" value="register"  [disabled]='registerForm.form.invalid'/>  -->
         <button mat-raised-button color="accent" (click)="registerSeconedStep()" [disabled]='registerForm.form.invalid'>register</button>
 
     </form>
