--- a/client/supermarket-app/src/app/components/add-new-product/add-new-product.component.html
+++ b/client/supermarket-app/src/app/components/add-new-product/add-new-product.component.html
@@ -1,5 +1,8 @@
 <h1>Create New Product</h1>  
-<form #registerForm='ngForm'>
+
+
+
+<form #registerForm='ngForm' enctype="multipart/form-data">
     <p>
         <mat-form-field appearance="legacy" >
           <mat-label>Product name</mat-label>
@@ -21,7 +24,7 @@
     <p>
         <mat-form-field appearance="legacy" >
           <mat-label>Image URL</mat-label>
-          <input type="text" matInput placeholder="Insert image URL" name="image" #productImageInput='ngModel'
+          <input type="text" matInput placeholder="Insert image URL" name="imageUrl" #productImageInput='ngModel'
            [(ngModel)]="newProduct.imageUrl" required>
         </mat-form-field><br>
         <span *ngIf="productImageInput.errors?.required && productImageInput.touched">"You must enter product image URL "<br></span>
@@ -31,7 +34,15 @@
      #categoryInput='ngModel' >
          <option *ngFor="let category of categoriesService.categories " value="{{category.id}}" >{{category.name}} </option>
      </select><br>
-     <span *ngIf="categoryInput.touched && categoryInput.errors?.required">"please choose a catgory"<br></span>    
+     <span *ngIf="categoryInput.errors?.required">"please choose a catgory"<br></span>    
+
+
+
+     <file-upload [(ngModel)]="newProduct.image" name="files" accept="file_extension|image/*" 
+     #productImageFileInput='ngModel' [fileslimit]="1" ></file-upload>
+     <span *ngIf="productImageFileInput.errors?.required && productImageFileInput.touched">"upload img is must"<br></span>    
+
+
 
     <button mat-raised-button color="accent" (click)="createProduct()"   [disabled]='registerForm.form.invalid'>Create</button>
 
