--- a/client/supermarket-app/src/app/components/navbar/navbar.component.html
+++ b/client/supermarket-app/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,8 @@
       <mat-icon aria-hidden="false" aria-label="e8cc" [matBadge]="this.products.length" matBadgeColor="warn">shopping_cart</mat-icon> <br>
     </button>
   
-       <button *ngIf="!this.stateService.isCartContainer && this.stateService.isLoggedIn && this.usersService.isAdmin==='CUSTOMER' "  (click)="toggleCartPage()" mat-icon-button matTooltip="back to shopping page" matTooltipPosition="left"><mat-icon aria-hidden="false" 
+       <button *ngIf="!this.stateService.isCartContainer && this.stateService.isLoggedIn && this.usersService.isAdmin==='CUSTOMER' " 
+       (click)="toggleCartPage()" mat-icon-button matTooltip="back to shopping page" matTooltipPosition="left"><mat-icon aria-hidden="false" 
      aria-label="e88a">home</mat-icon></button>
      
      <span *ngIf='this.usersService.firstName && this.stateService.isLoggedIn' class="username-nav">Hello {{this.usersService.firstName}}</span>
