--- a/client/supermarket-app/src/app/components/cart-container/cart-container.component.css
+++ b/client/supermarket-app/src/app/components/cart-container/cart-container.component.css
@@ -72,3 +72,27 @@ p {
   width: 60px;
   font-weight: bolder;
 }
+
+.toggle-btns-container {
+  position: relative;
+  top: 45px;
+  margin: 20px;
+}
+
+
+.show-hide-cart{
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 2s;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
